--- a/css/style.css
+++ b/css/style.css
@@ -79,8 +79,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 35px;
-    height: 118px;
+    padding: 30px;
+    height: 108px;
 }
 .li-1--active{
     width: 140px;
@@ -118,7 +118,7 @@ body{
     color: white;
 }
 .main .bg__color{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -344,7 +344,7 @@ body{
     justify-content: center;
     align-items: center;
     margin-top: -100px;
-    margin-left: 20px;
+    margin-left: 25px;
 }
 .card__title{
     color: var(--white, #FFF);
@@ -391,6 +391,7 @@ body{
     justify-content: center;
 }
 .window__item{
+    overflow: auto;
     display: none;
     justify-content: end;
     position: fixed;
@@ -450,12 +451,19 @@ body{
     margin: auto;
     display: block;
 }
+.active{
+    display: none;
+}
+.element{
+    display: flex;
+}
 .window__text{
     color: var(--white, #FFF);
     font-family: Barlow;
     font-size: 28px;
     font-style: normal;
     font-weight: 600;
+    margin: 0;
 }
 
 
@@ -675,6 +683,7 @@ body{
 }
 .order--profile-or-burger--active{
     display: block !important;
+    overflow: auto;
 }
 .order--profile-or-burger{
     display: none;
@@ -958,4 +967,539 @@ body{
     font-weight: 600;
     line-height: 140%;
     margin: 0;
+}
+
+.delete > * {
+    pointer-events: none;
+}
+.order--payment--active{
+    display: block !important; 
+}
+.order--payment{
+    display: none;
+    justify-content: end;
+    position: fixed;
+    right: 0;
+    top: 0;
+    background-color: #252836;
+    height: 100%;
+    padding: 50px;
+    z-index: 100;   
+}
+.order--payment-title{
+    color: var(--white, #FFF);
+    font-family: Barlow;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%; 
+}
+.order--payment-text{
+    color: var(--text-light, #ABBBC2);
+    font-family: Barlow;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 140%;
+}
+.order--payment-cards{
+    display: flex;
+    gap: 8px;
+}
+.order-payment-section-title{
+    color: var(--white, #FFF);
+    font-family: Barlow;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%;
+}
+.card-title{
+    color: var(--white, #FFF);
+    font-family: Barlow;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    margin: 0;
+    line-height: 130%; 
+    padding-bottom: 8px;
+}
+.payment--button{
+    display: flex;
+    padding-top: 120px;
+    align-items: center;
+    gap: 35px;
+}
+.payment--button-btn:hover{
+    box-shadow: 0px 8px 24px 0px rgba(234, 124, 105, 0.30);
+    color: #E0E6E9;
+    border-radius: 8px;
+    background: var(--primary-color, #EA7C69);
+}
+.payment--button-btn{
+    padding-top: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color: var(--base-bg, #EA7C69);
+    font-family: Barlow;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    border-radius: 8px;
+    background: var(--primary-color, #252836);
+    border: 1px solid var(--primary-color, #EA7C69);
+    width: 180px;
+    height: 48px;
+    padding: 14px;
+}
+.input--section{
+    display: flex;
+    gap: 30px;
+}
+.order--payment-select-card{
+    display: flex;
+    gap: 30px;
+}
+.order--payment-card--active{
+    border-radius: 8px;
+    border: 1px solid var(--text-light, #ABBBC2);
+    background: var(--base-dark-bg-1, #252836) !important;
+}
+.order--payment-card{
+    width: 101px;
+    height: 64px;
+    border-radius: 8px;
+    border: 1px solid var(--text-light, #ABBBC2);
+    background: var(--base-dark-bg-1, #1F1D2B);
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+}
+.order--payment-img{
+    width: 24px;
+    height: 24px;
+    margin-top: 10px;
+    margin-bottom: 2px;
+}
+
+.description-card{
+    display: flex;
+    width: 175px;
+    padding: 14px 96px 14px 14px;
+    align-items: flex-start;
+    gap: 8px;
+    border-radius: 8px;
+    border: 1px solid var(--base-dark-line, #393C49);
+    background: var(--base-form-bg, #2D303E);
+    color: #E0E6E9;
+}
+.choose__select-card{
+    border-radius: 8px;
+    border: 1px solid #FFF;
+    width: 175px;
+    display: flex;
+    height: 48px;
+    align-items: center;
+    justify-content: start;
+    position: relative;
+    cursor: pointer;
+    border-radius: 8px;
+    border: 1px solid var(--base-dark-line, #393C49);
+    background: var(--base-dark-bg-2, #1F1D2B);
+}
+.select__text-card{
+    color: var(--white, #FFF);
+    font-family: Barlow;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+}
+.card-items{
+    padding-top: 16px;
+}
+.plus--items{
+    padding-top: 24px;
+    padding-bottom: 16px;
+}
+.plus--item-2{
+    padding-top: 16px;
+}
+
+.description-card-window{
+    display: flex;
+    color: #E0E6E9;
+    width: 380px;
+    padding: 14px 96px 14px 14px;
+    align-items: flex-start;
+    gap: 8px;
+    border-radius: 8px;
+    border: 1px solid var(--base-dark-line, #393C49);
+    background: var(--base-form-bg, #2D303E);
+}
+.choose__select-card-img{
+    display: flex;
+    padding-left: 14px;
+    padding-right: 10px;
+}
+.select__text--title{
+    color: var(--text-lighter, #E0E6E9);
+    font-family: Barlow;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 130%;
+}
+.img-activator--active{
+    display: flex !important;
+}
+.img-activator{
+    display: none;
+    align-items: end;
+    justify-content: end;
+    position: absolute;
+    padding-left: 40px;
+    margin-top: -10px;
+}
+.new-card--active{
+    display: flex;
+    align-items: center;
+}
+
+@media (max-width:440px){
+    .tabs{
+        gap: 20px;
+        z-index: 9999;
+        bottom: 0;
+        width: 100% ;
+        height: 100px;
+        left: 0;
+        flex-direction: row;
+        margin: auto;
+    }
+    .card-back{
+        flex-wrap: wrap;
+        column-gap: 30px;
+        flex-direction: column;
+        align-items: center;
+        gap: 120px;
+        padding-left: 0;
+        margin-bottom: 60px;
+    }
+    .head__style{
+        flex-direction: column;
+        align-items: start;
+    }
+    .head__input{
+        padding-right: 0;
+    }
+    .head__li-1{
+        margin-left: -30px;
+    }
+    .tab__box{
+        overflow-y: auto
+    }
+    .tabs__btn:first-child{
+        margin-left: 60px;
+    }
+    .tabs__btn{
+        white-space: nowrap;
+        font-size: 16px !important;
+    }
+    .choose__select{
+        background-color: #1F1D2B;
+        width: 102px;
+        height: 46px;
+        border: none;
+    }
+    .text__title{
+        font-size: 20px;
+    }
+    .menu-btn{
+        border: none;
+        width: 102px;
+        background-color: #1F1D2B;
+    }
+    .select__title{
+        border-top: none;
+    }
+    .li-1:nth-child(3),
+    .li-1:nth-child(5),
+    .li-1:nth-child(6){
+        display: none;  
+    }
+
+    .li-1{
+        padding: 0;
+        background: none;
+    }
+    .li-1--active{
+        width: 100px;
+    }
+     .li-1:nth-child(4){
+        order: 2;
+    }
+     .li-1:nth-child(7){
+        order: 4;
+    }
+    .li-1:nth-child(2){
+        order: 3;
+    }
+    .li-1:nth-child(8){
+        order: 5;
+    }
+    .li-1:nth-child(1){
+        order: 1;
+    } 
+    .dish-item:hover{
+        transform: scale(1);
+    }
+    .window__item{
+        width: 100%;
+        padding: 0;
+    }
+    .window__btn{
+        margin-bottom: 100px;
+        width: 90%;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        margin-bottom: 30px;
+    }
+    .active{
+        display: flex;
+    }
+    .window__img{
+        width: 300px;
+        height: 300px;
+        margin-top: 60px;
+    }
+    .element{
+        margin-top: 20px;
+        margin-left: 30px;
+    }
+    .window__text-title{
+        color: var(--text-lighter, #E0E6E9);
+        padding-bottom: 190px;
+    }
+    .window__text-2{
+        padding-bottom: 0;
+    }
+    .client-buy-btn{
+        align-items: center;
+        padding-right: 38px;
+    } 
+    .card__btn{
+        color: #FFF;
+        font-family: Barlow;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 140%;
+        width: 90%;
+        margin-top: 15px;
+    }
+    .plus{
+        margin-left: 25px;
+    }
+    .head__title{
+        margin: 0;
+        padding-top: 0;
+    }
+    .img--active{
+        display: flex;
+    }
+    .select__text{
+        padding-right: 7px;
+        font-size: 18px;
+    }
+    .choose__select{
+        border-radius: 8px;
+    }
+    .function{
+        width: 100%;
+        padding: 0;
+    }
+    .function--background{
+        width: 85%;
+        margin-left: 30px;
+    }
+    .function__head-title{
+        display: flex;
+        align-items: center;
+    }
+    .active-1{
+        margin-top: 0;
+    }
+    .information{
+        width: 100%;
+        padding: 0;
+    }
+    .information--background{
+        width: 85%;
+        margin-left: 30px;
+        height: 434px;
+    }
+    .information--icon-background{
+        padding-left: 0;
+    }
+    .information__items {
+        padding-top: 10px;
+        padding-left: 20px;
+    }
+    .information--icon-background-items:not(:last-child){
+        padding-right: 40px;
+    }
+    .information--icon-background-items:first-child{
+        margin-left: 40px;
+    }
+    .information--head-title{
+        padding-bottom: 0;
+    }
+    .element-plus{
+        margin-bottom: 60px;
+    }
+    .order--profile-or-burger{
+        width: 100%;
+        padding: 0;
+    }
+    .order--background{
+        width: 370px;
+        margin: auto;
+        height: auto;
+        padding-bottom: 30px;
+    }
+    .profile{
+        width: 100%;
+        padding: 0;
+    }
+    .profile--background{
+        width: 90%;
+        margin: auto;
+    }
+    .link-order{
+        padding-top: 20px;
+    }
+    .order-div{
+        width: 90%;
+        margin: auto;
+        padding-top: 43px;
+    }
+    .ellipse{
+        width: 65px;
+        height: 65px;
+    }
+    .order--history{
+        background: #1F1D2B;
+    }
+    .order--title{
+        padding-bottom: 0;
+    }
+    .order--element{
+        margin-bottom: 20px;
+    }
+    .client--orders{
+        width: 100%;
+        overflow: auto;
+        padding: 0;
+        height: calc(100% - 100px);
+    }
+    .client--order-button{
+        width: 90%;
+        margin: auto;
+    }
+    .client--order-texts{
+        width: 100%;
+        margin-left: 25px;
+    }
+    .client--order-texts-item-1{
+        padding-right: 200px;
+    }
+    .border-bottom{
+        width: 90%;
+        margin: auto;
+    }
+    .client--order-header{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+    .order__section--product{
+        width: 90%;
+        margin: auto;
+    }
+    .order--count{
+        width: 90%;
+        margin: auto;
+    }
+    .description {
+        width: 304px;
+    }
+    .input-order{
+        width: 90%;
+        margin: auto;
+    }
+    .order-product-price{
+        margin-right: 90px;
+    }
+    .order-count{
+        margin-right: 90px;
+    }
+    .order-product-text{
+        margin-right: 20px;
+        margin-top: 20px;
+        text-align: center;
+    }
+    .discount{
+        width: 88%;
+        margin: auto;
+    }
+    .total{
+        width: 88%;
+        margin: auto;
+    }
+    .order--payment{
+        width: 100%;
+        margin: auto;
+        padding: 0;
+    }
+    .client--order-header{
+        margin-top: 0;
+        padding: 0;
+    }
+    .order--payment-text{
+        margin-right: 30;
+        width: 90%;
+        margin: auto;
+        margin-bottom: 24px;
+    }
+    .order--payment-title{
+        margin-left: 30px;
+    }
+    .order--payment-section{
+        width: 90%;
+        margin: auto;
+    }
+    .card-items{
+        width: 90%;
+        margin: auto;
+    }.payment--button-btn{
+        color: var(--primary-color, #EA7C69);
+        font-family: Barlow;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 140%;
+    }
+    .order--payment-select-card{
+        width: 90%;
+        margin: auto;
+    }
+    .payment--button{
+        padding-top: 80px;
+        margin: auto;
+        width: 90%;
+    }
+
 }
