--- a/css/style.css
+++ b/css/style.css
@@ -1258,6 +1258,7 @@ body{
     .window__item{
         width: 100%;
         padding: 0;
+        overflow: auto;
     }
     .window__btn{
         margin-bottom: 100px;
