--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #1F1D2B;
+    background-color: #252836;
     padding: 0;
     margin: 0;
     height: 100vh;
@@ -79,12 +79,27 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 30px;
+    width: 100%;
     height: 108px;
+    background-color: #1F1D2B;
 }
 .li-1--active{
     width: 140px;
+    background-color: #1F1D2B !important;
+    position: relative;
+    z-index: 3;
+}
+
+.li-1--active::after{
+    position: absolute;
+    content: "";
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background-color: #252836;
+    border-radius: 12px 0 0 12px;
 }
 .tabs__item-button--active{
     width: 57px;
@@ -1244,6 +1259,7 @@ body{
         height: 100px;
         left: 0;
         flex-direction: row;
+        background: #1F1D2B;
         margin: auto;
     }
     .card-back{
@@ -1300,6 +1316,7 @@ body{
     }
 
     .li-1{
+        height: 100px;
         padding: 0;
         background: none;
     }
@@ -1321,6 +1338,9 @@ body{
     .li-1:nth-child(1){
         order: 1;
     } 
+    .li-1--active::after{
+        background: #1F1D2B;
+    }
     .dish-item:hover{
         transform: scale(1);
     }
